Update index.html Update styles.css Just realized that my website is'nt responsive at all lets work on that

--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,11 @@ body {
 .socials i {
     font-size: 1.3rem;
     color: #001324;
+    transition: 1s;
+}
+
+.socials i:hover {
+    transform: translateY(-2px);
 }
 
 @keyframes skillfloat1 {
@@ -204,7 +209,6 @@ body {
     background-color: #c9b9a5;
     width: 100vw;
     justify-content: center;
-    box-shadow: 0px 10px 10px 10px black;
 }
 
 .space {
@@ -226,17 +230,28 @@ body {
         justify-content: center;
         text-align: center;
         align-items: center;
-        font-size: 5vh
-    }
-    .nomobile-img {
-        position: fixed;
-        width: 60vh;
-        align-self:baseline;
-    }
-    .nomobile img {
-        width: 100%
+        font-size: 150%
     }
     body {
         overflow: hidden;
     }
+}
+
+.darwin {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    rotate: -50deg;
+    z-index: 998;
+    transform: translateY(100%);
+    transition: 1s;
+}
+
+.darwin:hover {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    rotate: -50deg;
+    z-index: 998;
+    transform: translateY(60%)
 }
