Converted all images from png to webp to improve performance and page loading speeds. Updated index.html Updated styles.css Still trying to make the site responsive

--- a/styles.css
+++ b/styles.css
@@ -203,18 +203,6 @@ body {
     width: 100%;
 }
 
-.footer {
-    display: flex;
-    position: relative;
-    background-color: #c9b9a5;
-    width: 100vw;
-    justify-content: center;
-}
-
-.space {
-    height: 43%
-}
-
 .nomobile {
     display: none;
 }
@@ -253,5 +241,9 @@ body {
     bottom: 0;
     rotate: -50deg;
     z-index: 998;
-    transform: translateY(60%)
+    transform: translateY(60%);
+}
+
+#clickondarwin {
+    font-size: 60%;
 }
