--- a/styles.css
+++ b/styles.css
@@ -18,97 +18,6 @@ body {
     display: flex;
     border-radius: 8px;
     width: 15%;
-    animation-duration: 2s;
-    animation-name: floatbump;
-    animation-iteration-count: infinite;
-}
-
-@keyframes floatbump /* This not a bug, this is a feature lol */
-{
-    0%
-    {
-        transform: translateY(1px);
-    }
-    5%
-    {
-        transform: translateY(2px);
-    }
-    10%
-    {
-        transform: translateY(3px);
-    }
-    15%
-    {
-        transform: translateY(4px);
-    }
-    20%
-    {
-        transform: translateY(5%);
-    }
-    25%
-    {
-        transform: translateY(6px);
-    }
-    30%
-    {
-        transform: translateY(7px);
-    }
-    35%
-    {
-        transform: translateY(8px);
-    }
-    40%
-    {
-        transform: translateY(9px);
-    }
-    45%
-    {
-        transform: translateY(10px);
-    }
-    50%
-    {
-        transform: translateY(11px);
-    }
-    55%
-    {
-        transform: translateY(10px);
-    }
-    60%
-    {
-        transform: translateY(9px);
-    }
-    65%
-    {
-        transform: translateY(8px);
-    }
-    70%
-    {
-        transform: translateY(7px);
-    }
-    75%
-    {
-        transform: translateY(6px);
-    }
-    80%
-    {
-        transform: translateY(5px);
-    }
-    85%
-    {
-        transform: translateY(4px);
-    }
-    90%
-    {
-        transform: translateY(3px);
-    }
-    95%
-    {
-        transform: translateY(2px);
-    }
-    100%
-    {
-        transform: translateY(1px);
-    }
 }
 
 .bio {
@@ -195,7 +104,7 @@ body {
 }
 
 .tile {
-    width: 20%;
+    width: 20vw;
     margin-top: 10px;
 }
 
