--- a/styles.css
+++ b/styles.css
@@ -212,7 +212,7 @@ body {
     }
 }
 
-@media (max-height: 480px) {
+@media (max-height: 590px) {
     .skills {
         display: none;
     }
@@ -241,13 +241,7 @@ body {
 
 @media (max-width: 380px) {
     .skills {
-        display: grid;
-        grid-template: 150px / auto auto auto
-    }
-    .wired {
-        position: absolute;
-        align-self: center;
-        justify-self: center;
+        font-size: 120%;
     }
 }
 
@@ -427,38 +421,30 @@ body {
     }
 }
 
-.skill {
-  position: relative;
-  display: inline-block;
-  margin: 1rem;
+@media (max-height: 345px) {
+    #projects {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    #projects img {
+        display: none;
+    }
 }
 
-.spanlabel {
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translateX(-50%) scale(0.95);
-  color: #ffffff;
-  padding: 8px;
-  font-size: 3vh;
-  backdrop-filter: blur(2px) saturate(200%);
-  -webkit-backdrop-filter: blur(2px) saturate(200%);
-  background-color: rgba(17, 25, 40, 0.5);
-  border-radius: 12px;
-  border: 1px solid rgba(255, 255, 255, 0.125);
-  z-index: 2;
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.3s ease-in-out;
-  text-shadow:
-    0 0 10px rgb(133, 131, 131),
-    0 0 10px rgb(133, 131, 131),
-    0 0 10px rgb(133, 131, 131),
-    0 0 10px rgb(133, 131, 131);
-}
+@media (max-height: 504px) {
+    .skillgraph {
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+    align-items: flex-start;
+    gap: 2rem;
+    }
 
-.skill:hover .spanlabel {
-  opacity: 1;
-  visibility: visible;
-  transform: translateX(-50%) scale(1);
+    .skillwrapper1,
+    .skillwrapper2 {
+    width: 50%;
+    }
+
 }
